# gaussian_blur

./: .gitignore  CMakeLists.txt  README.md  blur.cl  main.cpp
.github/workflows/: ci.yml
